--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,11 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+#root {
+  display: flex;
+  flex-direction: column;
+  place-items: center;
+}
 a {
   font-weight: 500;
   color: #646cff;
@@ -20,15 +25,6 @@ a {
 a:hover {
   color: #535bf2;
 }
-
-body {
-  margin: 0 auto;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
-
 h1,
 h2,
 h3,
