--- a/src/components/ContactForm/ContactForm.module.css
+++ b/src/components/ContactForm/ContactForm.module.css
@@ -1,30 +1,28 @@
-.container {
+.form {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  border: 1px solid white;
-  border-radius: 5px;
-  padding: 15px 20px;
-  max-width: 400px;
-  margin-bottom: 20px;
-}
-.labelName,
-.labelNumber {
-  display: flex;
-  flex-direction: column;
-  font-size: 20px;
-  font-weight: 400;
-  min-width: 360px;
-}
-.labelName {
-  padding-bottom: 36px;
-}
-.labelNumber {
-  padding-bottom: 24px;
+  gap: 15px;
+  min-width: 300px;
+  place-items: end;
 }
 .btn {
-  max-width: 260px;
+  width: 120px;
+  padding: 10px;
+  background-color: black;
+  color: rgba(20, 220, 20, 0.9);
+  border: 1px solid green;
+  margin-bottom: 30px;
 }
-.errorMsg {
-  color: red;
+.label {
+  display: flex;
+  gap: 10px;
+  font-weight: 500;
+}
+.input {
+  width: 200px;
+  color: rgba(20, 220, 20, 0.9);
+  font-weight: 500;
+  outline: none;
+  border: 1px solid green;
+  background-color: rgb(0, 0, 0);
 }
