--- a/src/index.css
+++ b/src/index.css
@@ -4,8 +4,8 @@
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  color: white;
+  background-color: rgb(29, 29, 29);
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -14,11 +14,11 @@
 }
 a {
   font-weight: 500;
-  color: #646cff;
+  color: white;
   text-decoration: inherit;
 }
 a:hover {
-  color: #535bf2;
+  color: rgba(20, 220, 20, 0.9);
 }
 h1,
 h2,
@@ -52,21 +52,20 @@ button {
   cursor: pointer;
   transition: border-color 0.25s;
 }
-button:hover {
-  border-color: #646cff;
+input:hover {
+  border-color: white;
 }
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+button:hover {
+  border-color: white;
 }
 
 @media (prefers-color-scheme: light) {
   :root {
-    color: #213547;
+    color: #26445e;
     background-color: #ffffff;
   }
   a:hover {
-    color: #747bff;
+    color: rgba(20, 220, 20, 0.9);
   }
   button {
     background-color: #f9f9f9;
