--- a/src/components/SearchBox/SearchBox.module.css
+++ b/src/components/SearchBox/SearchBox.module.css
@@ -1,13 +1,17 @@
 .label {
   display: flex;
   flex-direction: column;
-  font-size: 20px;
-  font-weight: 400;
-  padding-bottom: 32px;
-  gap: 4px;
-  width: 400px;
+  gap: 10px;
+  font-weight: 500;
+  margin-bottom: 20px;
+  place-items: end;
+  min-width: 300px;
 }
 .input {
-  min-width: 360px;
-  padding-left: 8px;
+  width: 200px;
+  color: rgba(20, 220, 20, 0.9);
+  font-weight: 500;
+  outline: none;
+  border: 1px solid green;
+  background-color: rgb(0, 0, 0);
 }
